[workspace]
members = [
  # the libraries that i'll use for building these challenges
  "maelstrom",  # provides types for Maelstrom services like Message and Node.
                # i may publish this package separately.
  "runtime",  # provides common runtime like tracing and error reporting

  # binary packages implementing each challenge
  "echo",
  "unique-ids",
]
