[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tailsome = "0.1.0"
tap = "1.0.1"
tokio = { version = "1.26.0", features = ["rt", "io-util", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
rstest = "0.16.0"
