[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tailsome = "1.0.0"
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

[dev-dependencies]
tracing = "0.1.37"
