[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
lazy_static = "1.4.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
stable-eyre = "0.2.2"
tailsome = "1.0.0"
tap = "1.0.1"
tokio = "1.27.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

[dev-dependencies]
tracing = "0.1.37"
